[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "w3-mcp-server-lsp"
version = "0.1.3"
description = "MCP server wrapping TypeScript Language Server for JavaScript/TypeScript"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "W3 Labs"}]
keywords = ["mcp", "lsp", "typescript", "javascript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
w3-mcp-server-lsp = "server:main"

[tool.setuptools]
py-modules = ["server", "lsp_client"]

[project.urls]
Homepage = "https://github.com/famtong8-dev/w3-mcp-server-lsp"
Repository = "https://github.com/famtong8-dev/w3-mcp-server-lsp"
Documentation = "https://github.com/famtong8-dev/w3-mcp-server-lsp/blob/main/README.md"
Issues = "https://github.com/famtong8-dev/w3-mcp-server-lsp/issues"
Changelog = "https://github.com/famtong8-dev/w3-mcp-server-lsp/releases"